--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+grep = "0.2.12"
+grep-regex = "0.1.11"
 log = "0.4.19"
 log4rs = "1.2.0"
 moka = "0.11.2"
 rustyline = { version = "12.0.0", features = ["with-file-history"]}
+walkdir = "2.3.3"
