--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,9 @@ edition = "2021"
 
 [dependencies]
 grep = "0.2.12"
-grep-regex = "0.1.11"
-log = "0.4.19"
+log = {version="0.4.19", features = ["release_max_level_off"]}
 log4rs = "1.2.0"
+lopdf = "0.31.0"
 moka = "0.11.2"
-pdf-extract = "0.6.5"
 rustyline = { version = "12.0.0", features = ["with-file-history"]}
 walkdir = "2.3.3"
